--- a/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
+++ b/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
@@ -651,6 +651,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ventas\Venta.cs" />
+    <Compile Include="Ventas\VentaMostrador\IU_DetalleArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ventas\VentaMostrador\IU_DetalleArticulo.Designer.cs">
+      <DependentUpon>IU_DetalleArticulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ventas\VentaMostrador\IU_RegistrarVenta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -890,6 +896,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ventas\VentaMostrador\IU_DetalleArticulo.resx">
+      <DependentUpon>IU_DetalleArticulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventas\VentaMostrador\IU_RegistrarVenta.resx">
       <DependentUpon>IU_RegistrarVenta.cs</DependentUpon>
