--- a/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
+++ b/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
@@ -952,6 +952,12 @@
     </Content>
     <Content Include="images\icono-ferreteria_32.ico" />
     <Content Include="images\icono-ferreteria_64.ico" />
+    <None Include="Resources\exit_128.png" />
+    <None Include="Resources\login_128.png" />
+    <None Include="Resources\venta2_32.png" />
+    <None Include="Resources\compra3_32.png" />
+    <None Include="Resources\logistica3_32.png" />
+    <None Include="Resources\compra2_32.png" />
     <None Include="Resources\soporte_32.png" />
     <None Include="Resources\soporte1_32.png" />
     <None Include="Resources\logistica_32.png" />
