Se le agregan iconos a todos los botones del sistema.

--- a/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
+++ b/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
@@ -962,6 +962,70 @@
     </Content>
     <Content Include="images\icono-ferreteria_32.ico" />
     <Content Include="images\icono-ferreteria_64.ico" />
+    <None Include="Resources\ClientesMayGris_128.png" />
+    <None Include="Resources\ClientesMayGris_32.png" />
+    <None Include="Resources\ClientesMayGris_64.png" />
+    <None Include="Resources\clienteMayoristaGris_128.png" />
+    <None Include="Resources\clienteMayoristaGris_32.png" />
+    <None Include="Resources\clienteMayoristaGris_64.png" />
+    <None Include="Resources\facturaNCGris_32.png" />
+    <None Include="Resources\IngresoArticuloGris_32.png" />
+    <None Include="Resources\IngresoArticuloGris_64.png" />
+    <None Include="Resources\IngresoArticuloGris_128.png" />
+    <None Include="Resources\IngresoArticulo_32.png" />
+    <None Include="Resources\IngresoArticulo_64.png" />
+    <None Include="Resources\IngresoArticulo_128.png" />
+    <None Include="Resources\facturaNCGris_64.png" />
+    <None Include="Resources\envioGris_32.png" />
+    <None Include="Resources\envioGris_64.png" />
+    <None Include="Resources\envioGris_128.png" />
+    <None Include="Resources\listadoGris_128.png" />
+    <None Include="Resources\impresionGris_128.png" />
+    <None Include="Resources\listadoGris_32.png" />
+    <None Include="Resources\listadoGris_64.png" />
+    <None Include="Resources\impresionGris_64.png" />
+    <None Include="Resources\impresionGris_32.png" />
+    <None Include="Resources\remitoGris_32.png" />
+    <None Include="Resources\facturaBGris_32.png" />
+    <None Include="Resources\facturaAGris_32.png" />
+    <None Include="Resources\facturaAGris_64.png" />
+    <None Include="Resources\facturaBGris_64.png" />
+    <None Include="Resources\remitoGris_64.png" />
+    <None Include="Resources\facturaCGris_64.png" />
+    <None Include="Resources\facturaXGris_64.png" />
+    <None Include="Resources\facturaXGris_32.png" />
+    <None Include="Resources\facturaCGris_32.png" />
+    <None Include="Resources\marcaGris_64.png" />
+    <None Include="Resources\tipoArticulo_32.png" />
+    <None Include="Resources\tipoArticulo_64.png" />
+    <None Include="Resources\tipoArticuloGris_32.png" />
+    <None Include="Resources\tipoArticuloGris_64.png" />
+    <None Include="Resources\GEM_32.png" />
+    <None Include="Resources\GEM_64.png" />
+    <None Include="Resources\GEM_per_32.png" />
+    <None Include="Resources\GEM_per_64.png" />
+    <None Include="Resources\marcaGris_32.png" />
+    <None Include="Resources\ubicacionGris_64.png" />
+    <None Include="Resources\ubicacion_32.png" />
+    <None Include="Resources\ubicacion_64.png" />
+    <None Include="Resources\historialGris_32.png" />
+    <None Include="Resources\historialGris_64.png" />
+    <None Include="Resources\credito_32.png" />
+    <None Include="Resources\credito_64.png" />
+    <None Include="Resources\creditoGris_32.png" />
+    <None Include="Resources\creditoGris_64.png" />
+    <None Include="Resources\ubicacionGris_32.png" />
+    <None Include="Resources\usuario_64.png" />
+    <None Include="Resources\estadisticas_64.png" />
+    <None Include="Resources\estadisticasGris_64.png" />
+    <None Include="Resources\usuarioGris_64.png" />
+    <None Include="Resources\estadisticaGris_32.png" />
+    <None Include="Resources\soporteGris_32.png" />
+    <None Include="Resources\articulo_32.png" />
+    <None Include="Resources\articuloGris_32.png" />
+    <None Include="Resources\ventaGris_32.png" />
+    <None Include="Resources\compraGris_32.png" />
+    <None Include="Resources\usuarioGris_32.png" />
     <None Include="Resources\proveedores_32.png" />
     <None Include="Resources\proveedores_64.png" />
     <None Include="Resources\proveedores_128.png" />
