Se coloca checkbox para facturar. En el futuro hacerlo desde soporte una opcion para facturar o no.

--- a/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
+++ b/SistemaLaObra/SistemaLaObra/SistemaLaObra.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Estadística\IU_MenuPrincipalEstadistica.Designer.cs">
       <DependentUpon>IU_MenuPrincipalEstadistica.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\Factura.cs" />
     <Compile Include="Modelo\ListaFormaPagos.cs" />
     <Compile Include="Modelo\ListaTarjetas.cs" />
     <Compile Include="Logistica\RegistrarIngresoDeProducto\Controlador_RegistrarIngresoDeProducto.cs" />
