--- a/SistemaLaObra/SistemaLaObra/App.config
+++ b/SistemaLaObra/SistemaLaObra/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="SistemaLaObra.Properties.Settings.LaObraConnectionString"
-      connectionString="Data Source=DESKTOP-BDPG71E\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True"
+      connectionString="Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
