Se modifica la clase encargado y se arreglan errores. Seguir trabajando con Registrar y modificar Usuarios

--- a/SistemaLaObra/SistemaLaObra/Properties/Settings.settings
+++ b/SistemaLaObra/SistemaLaObra/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="LaObraConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=EZEQUIEL\SQL;Initial Catalog=LaObra;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=EZEQUIEL\SQL;Initial Catalog=LaObra;Integrated Security=True</Value>
     </Setting>
     <Setting Name="CadenaDeConexionLaObra" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
