Se arregla interfaz de Datos Usuarios

--- a/SistemaLaObra/SistemaLaObra/App.config
+++ b/SistemaLaObra/SistemaLaObra/App.config
@@ -10,6 +10,8 @@
       providerName="System.Data.SqlClient" />
     <add name="SistemaLaObra.Properties.Settings.CadenaDeConexionLaObra"
       connectionString="Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
+    <add name="SistemaLaObra.Properties.Settings.notebookConexion"
+      connectionString="Data Source=DESKTOP-BDPG71E\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
